# gdextiention-libopus

./: .gitignore  LICENSE  clang-lto.ini  gdopus.gdextension  meson.build
src/: NativeAction.c  NativeAction.h  Opus.c  Opus.h  api.c  api.h  defs.h  godot.h  init.c  init.h  interanltypes.h  opus_classes.h  opus_decoder.c  opus_encoder.c  structsize.h  utils.c
src/cpp/: audio_stream_raw_opus.cpp  audio_stream_raw_opus.hpp
src/ihatec++/: c.h  c.hpp  v.cpp  v.h
src/structsize/: double_32  double_64  float_32  float_64
subprojects/: godotcpp.wrap  libopus.wrap
subprojects/packagefiles/godot-cpp-overlay/: findoutput.py  meson.build
